manifests/full/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usdt-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: usdt-worker
  template:
    metadata:
      labels:
        app: usdt-worker
    spec:
      containers:
        - name: usdt-worker
          image: seowlee/usdt-worker:latest
          restartPolicy: Always
