manifests/full/listener-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: listener-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: listener.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: usdt-listener-service
                port:
                  number: 80
